# playing_cards

./: Cargo.toml  README.md  canister_ids.json  dfx.json  generate_candid.sh  package-lock.json  package.json  setup_local.sh
scripts/: fund_tokens.sh  generate_candid.sh  init_local.sh  network_ic.sh  setup_local.sh  setup_online.sh
src/backend/: Cargo.toml  backend.did
src/backend/src/: deck.rs  lib.rs
src/frontend/: package.json  tailwind.config.cjs  vite.config.js
src/frontend/src/: app.html  app.pcss
src/frontend/src/lib/canisters/: canisters.js
src/frontend/src/lib/components/: Login.svelte  NftDetaills.svelte
src/frontend/src/routes/: +layout.svelte  +page.svelte
src/frontend/src/routes/deck/: +page.svelte
src/frontend/src/routes/wallet/: +page.svelte
src/playing_cards_backend/: Cargo.toml  playing_cards_backend.did
src/playing_cards_backend/src/: deck.rs  http.rs  icrc1.rs  lib.rs  marketplace.rs  wallet.rs
src/playing_cards_backend/src/default_cards/: mint_default_cards.rs
src/playing_cards_frontend/: package.json  tailwind.config.cjs
src/playing_cards_frontend/src/: app.html  app.pcss
src/playing_cards_frontend/src/lib/: utils.js
src/playing_cards_frontend/src/lib/canisters/: canisters.js
src/playing_cards_frontend/src/lib/components/: Footer.svelte  Header.svelte  Login.svelte  NftCard.svelte
src/playing_cards_frontend/src/lib/stores/: auth.js
src/playing_cards_frontend/src/routes/: +layout.svelte  +page.svelte
src/playing_cards_frontend/src/routes/marketplace/: +page.svelte
src/themes/: 98style.ts
(+4 files in other folders)
